--- a/cart.html
+++ b/cart.html
@@ -1262,7 +1262,7 @@
 
 
 
-<script>// /js/cart-ui.js
+<script type="module">// /js/cart-ui.js
 import {
   startCartData, on,
   setQty, removeItem, clearEntireCart, writePurchase,
