change warning bubble and align qty and buy buttons on cart.html

--- a/cart.html
+++ b/cart.html
@@ -612,7 +612,24 @@
       .stepdesc {
         display: none;
       }
-    }
+    }.row2{
+  display:flex;
+  align-items:center;          /* vertical align */
+  justify-content:space-between;
+  gap:12px;
+  flex-wrap:nowrap;            /* IMPORTANT: prevent wrapping */
+}
+
+.row2 > div:first-child{
+  min-width:0;                 /* allow shrinking */
+  flex:1 1 auto;
+}
+
+.qty{
+  flex:0 0 auto;
+  margin-left:auto;            /* keep it pinned to the right */
+}
+
   </style>
 </head>
 
@@ -781,7 +798,7 @@
             </div>
 
             <div class="notice warn" style="margin-bottom:10px;">
-              Make sure each Square Payment Link is configured to redirect back to the cart page after payment.
+              Each payment is processed seperately by Square.
             </div>
 
             <div id="paidListPay"></div>
@@ -1613,16 +1630,21 @@
     `;
 
     // Hide action buttons ONLY on Review
-    const showActions = (view !== "review");
+const showActions = (view !== "review");
 
-    const actionRow = showActions ? `
-      <div class="row2" style="justify-content:flex-end; margin-top:2px;">
-        ${primaryAction}
-        ${accessUrl && kind === "paid" ? `
-          <a class="btn btn-ghost btn-small" href="${escapeHtml(accessUrl)}" target="_blank" rel="noopener">View details</a>
-        ` : ``}
-      </div>
-    ` : ``;
+// In pay view, put the primary action beside qty (same row)
+const inlineAction = (view === "pay") ? primaryAction : "";
+
+// Only show the old action row for non-review, non-pay views
+const actionRow = (showActions && view !== "pay") ? `
+  <div class="row2" style="justify-content:flex-end; margin-top:2px;">
+    ${primaryAction}
+    ${accessUrl && kind === "paid" ? `
+      <a class="btn btn-ghost btn-small" href="${escapeHtml(accessUrl)}" target="_blank" rel="noopener">View details</a>
+    ` : ``}
+  </div>
+` : ``;
+
 
     return `
       <div class="item">
@@ -1632,13 +1654,15 @@
           <div class="title">${title}</div>
           ${variantLine}
 
-          <div class="row2">
-            <div>
-              ${priceLabel}
-              ${hint}
-            </div>
-            ${qtyControls}
-          </div>
+ <div class="row2">
+  <div>
+    ${priceLabel}
+    ${hint}
+  </div>
+  ${inlineAction}
+  ${qtyControls}
+</div>
+
 
           ${actionRow}
         </div>
