--- a/sign-in.html
+++ b/sign-in.html
@@ -254,17 +254,13 @@
       <ul class="nav-links" id="navbarLinks">
         <li class="nav-item"><a href="/">Home</a></li>
         <li class="nav-item"><a href="products">Products</a></li>
-        <li class="nav-item"><a href="help">Help</a></li>
+        <li class="nav-item"><a href="contact">Contact</a></li>
         <li class="nav-item"><a href="about">About</a></li>
         <li class="nav-item dropdown">
           <a href="javascript:void(0)">More</a>
           <div class="dropdown-content">
             <a href="portfolio">Portfolio</a>
-            <a href="contact">Contact</a>
             <a href="blog">Blog</a>
-            <a href="live-chat">Live Chat</a>
-            <a href="live-game">Live Chat and Game</a>
-            <a href="puzzle-squares">Puzzle Squares</a>
           </div>
         </li>
         <li class="old-site-btn"><a href="old"><button type="button">Old site</button></a></li>
