--- a/products/software.html
+++ b/products/software.html
@@ -333,26 +333,15 @@
             navLinks.classList.toggle("show");
         }
     </script>
-    <nav class="navbar">
-        <div class="navbar-header">
-            <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
-            <ul class="nav-links" id="navbarLinks">
-                <li class="nav-item"><a href="/">Home</a></li>
-                <li class="nav-item"><a href="/products">Products</a></li>
-                <li class="nav-item"><a href="/help">Help</a></li>
-                <li class="nav-item"><a href="/about">About</a></li>
-                <li class="nav-item dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">More</a>
-                    <div class="dropdown-content">
-                        <a href="/portfolio">Portfolio</a>
-                        <a href="/contact">Contact</a>
-                        <a href="/blog">Blog</a>
-                    </div>
-                </li>
-                <a href="old"><button>Old site</button></a>
-            </ul>
-        </div>
-    </nav>
+      
+    <script type="module" src="/components/site-navbar.js"></script>
+    <script type="module">
+    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+    import { collection, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+    import { getFirebase } from "/components/firebase-init.js";
+
+    const { auth, db } = getFirebase();</script>
+
     <style>
         /* logo */
         .logo {
@@ -559,7 +548,8 @@
     </style>
 </head>
 <body>
-    
+      <site-navbar cart-href="/cart" signin-href="https://unlim8ted.com/sign-in" profile-href="https://unlim8ted.com/profile"></site-navbar>
+
     <div id="software" class="content-section">
         <h1>Software</h1>
         <div class="search-bar">
